--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="sync-status" id="sync-status">Ansluter...</div>
                 <div class="user-menu">
                     <div class="user-info" onclick="toggleUserMenu()">
+                        <span id="sync-indicator" class="sync-indicator sync-indicator-synced" title="Synkad"></span>
                         <div class="user-avatar" id="user-avatar">U</div>
                         <span id="user-name">User</span>
                     </div>
