--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="login-screen" class="login-screen">
         <div class="login-card">
             <h1 class="login-title">Brainbow</h1>
-            <p class="login-subtitle">Din personliga task & notes manager</p>
+            <p class="login-subtitle">Connecting humans</p>
             
             <div id="login-form">
                 <div class="form-group">
